<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/externalLayout"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp">


        <TextView
            android:id="@+id/tv_repository_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_repositoryName"
            android:textColor="#039BE5"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_description"
            android:textColor="#575757"
            app:layout_constraintEnd_toStartOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_repository_name" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/icon_user" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/txt_username"
            android:textColor="#039BE5"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/avatar"
            app:layout_constraintStart_toStartOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/txt_fullName"
            android:textAlignment="textEnd"
            android:textColor="#919090"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <ImageView
            android:id="@+id/img_branch_icon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:srcCompat="@drawable/git_branch_icon" />

        <TextView
            android:id="@+id/tv_forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/txt_branch"
            android:textColor="#DF9305"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_branch_icon"
            app:layout_constraintStart_toEndOf="@+id/img_branch_icon"
            app:layout_constraintTop_toTopOf="@+id/img_branch_icon"
            app:layout_constraintVertical_bias="0.8" />

        <ImageView
            android:id="@+id/img_star_icon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/tv_forks"
            app:layout_constraintTop_toTopOf="@+id/img_branch_icon"
            app:srcCompat="@drawable/ic_baseline_star_24" />

        <TextView
            android:id="@+id/tv_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/txt_stars"
            android:textColor="#DF9305"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_star_icon"
            app:layout_constraintStart_toEndOf="@+id/img_star_icon"
            app:layout_constraintTop_toTopOf="@+id/img_star_icon"
            app:layout_constraintVertical_bias="0.8" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_branch_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>